@@ -24,6 +24,7 @@ PHP                                                                        NEWS
 - Fixed bug #35543 (php crash when calling non existing method of a class
   that extends PDO). (Tony)
 - Fixed bug #35539 (typo in error message for ErrorException). (Tony)
+- FIxed bug #35536 (mysql_field_type() doesn't handle NEWDECIMAL). (Tony)
 - Fixed bug #35509 (string constant as array key has different behavior inside
   object). (Dmitry)
 - Fixed bug #35508 (PDO fails when unknown fetch mode specified). (Tony)
